# EPS-Desafio

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
