[project]
name = "onboarding-secops"
version = "0.1.0"
description = ""
authors = [
    {name = "leomitx10",email = "leandroalmeidaoliveira650@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
bandit = "^1.9.4"
safety = "^3.7.0"
ruff = "^0.15.8"

